--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -7,17 +7,21 @@
     <title>LAYOUT</title>
     <link rel="stylesheet" href="./style.css">
   </head>
+
   <body>
-    <div class="header">
-      <ul class="left-links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Store</a></li>
-      </ul>
-      <ul class="right-links">
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Settings</a></li>
-      </ul>
-    </div>
+    <header>
+      <div class="header">
+        <ul class="left-links">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Store</a></li>
+        </ul>
+        <ul class="right-links">
+          <li><a href="#">Profile</a></li>
+          <li><a href="#">Settings</a></li>
+        </ul>
+      </div>  
+    </header>
+
     <div class="content">
       <img src="./logo.png" alt="">
       <div class="input">
@@ -28,15 +32,19 @@
         <button>Do the other thing!</button>
       </div>
     </div>
-    <div class="footer">
-      <ul class="left-links">
-        <li><a href="#">Advertising</a></li>
-        <li><a href="#">Business</a></li>
-      </ul>
-      <ul class="right-links">
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Terms</a></li>
-      </ul>
-    </div>
+
+    <footer>
+      <div class="footer">
+        <ul class="left-links">
+          <li><a href="#">Advertising</a></li>
+          <li><a href="#">Business</a></li>
+        </ul>
+        <ul class="right-links">
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+        </ul>
+      </div>  
+    </footer>
+
   </body>
 </html>
