--- a/flex/07-flex-layout-2/index.html
+++ b/flex/07-flex-layout-2/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    
     <div class="header">
       <h1>MY AWESOME WEBSITE</h1>
     </div>
     
-    <section class="middle">
+    <div class="middle">
       <div class="sidebar">
         <ul>
           <li><a href="#">⭐ - link one</a></li>
@@ -29,12 +30,10 @@
         <div class="card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis illo ex quas, commodi eligendi aliquam ut, dolor, atque aliquid iure nulla. Laudantium optio accusantium quaerat fugiat, natus officia esse autem?</div>
         <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nihil impedit eius amet adipisci dolorum vel nostrum sit excepturi corporis tenetur cum, dolore incidunt blanditiis. Unde earum minima laboriosam eos!</div>  
       </div>
-    </section>
+    </div>
 
-    <footer>
-      <div class="footer">
-        The Odin Project ❤️
-      </div>  
-    </footer>
+    <div class="footer">
+      The Odin Project ❤️
+    </div>  
   </body>
 </html>
